fix: Make sure app/region title is fully readably

--- a/src/app/components/category-link/cateogry-link.component.scss
+++ b/src/app/components/category-link/cateogry-link.component.scss
@@ -3,7 +3,6 @@
   height: 100%;
 
   text-align: center;
-  font-size: 0.8125rem;
 }
 
 .link-tile--icon {
